--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <section id="sessao3">
           <div class="container-services">
             <div class="title-services">
-              <h2>Meus Serviços</h2>
+              <h2>Habilidades</h2>
             </div>
             <div class="box">
 
