--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <div class="columns-central swipper-wrapper">
                 <div class="slides swipper-sllide">
                   <img src="/css/images/testimonial-Vanessa.jpg" alt="" class="image">
-                  <p>"Aqui estarão os depoimentos! Aqui estarão os depoimentos! Aqui estarão os depoimentos! Aqui estarão os depoimentos! Aqui estarão os depoimentos!"</p>
+                  <p>"Aluno aplicado, comprometido e dedicado, trabalhou comigo por dois anos na incubadora, recomendo!"</p>
                   
                   <i class="fa-solid fa-quote-left quote-icon"></i>
 
