--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               <div class="card">
                 <i class="fa-solid fa-code"></i>              
                 <h5>Desenvolvimento Web</h5>
-                <p>Desenvolvo sites utilizando</p>
+                <p>Desenvolvo sites utilizando técnias modernas e ágeis</p>
                 <h5>Linguagens</h5>
                 <p>Javascript, HTML, CSS, Python, PHP</p>
                 <h5>Dev Tools</h5>
@@ -104,7 +104,7 @@
               <div class="card">
                 <i class="fa-solid fa-pen-nib"></i>              
                 <h5>Design</h5>
-                <p>Desenvolvo sites utilizando</p>
+                <p>Crio projetos gráficos exclusivos para o público que se pretende alcançar</p>
                 <h5>O que faço</h5>
                 <p>Logos, Arts,Banners, Flyers & Folders</p>
                 <h5>Design Tools</h5>
@@ -118,7 +118,7 @@
               <div class="card">
                 <i class="fa-brands fa-figma"></i>              
                 <h5>UI/UX</h5>
-                <p>Desenvolvo sites utilizando</p>
+                <p>Utilizo técncas que envolvem a criação de telas que garantem melhor experiência para o usuário, afim de garantir maior usabilidade</p>
                 <h5>Técnicas</h5>
                 <p>Wireframes, Prototipagem, Dashboard design & User Flow</p>
                 <h5>UX/UI Tools</h5>
