--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
       </div>
     </header>
 
-    <script>
+    <!-- toggle -->
+    <script> 
       const toggleBtn = document.querySelector('.toggle_btn')
       const toggleBtnIcon = document.querySelector('.toggle_btn i')
       const dropDownMenu = document.querySelector('.dropdown_menu')
@@ -58,8 +59,7 @@
         toggleBtnIcon.classList = isOpen
           ? 'fa-solid fa-xmark'
           : 'fa-solid fa-bars'
-
-      }
+      }      
     </script>
 
         <section class="section1" id="home">
@@ -90,13 +90,13 @@
         <section class="section2" id="about">
           <div class="main-about">
             <div class="image-about">            
-              <img src="../css/images/about.jpg" alt="">
+              <img src="../css/images/about-me.png" alt="">
             </div>
             <div class="text-about">
               <h1>Sobre mim</h1>
               <h5>Desenvolvedor & <span>Designer</span></h5>
               <p>Sou estudante de desenvolvimento web front-end e design, bem como sua aplicação em experiencia do usuario. Juntamente com o apoio da ITZN -Incubadora de Startups do IFRN - desenvolvi um projeto de filas virtuais no ano de 2019, que neste mesmo ano foi vencedor na categoria 'melhores projetos de tecnologia' na maior feira de ensino técnico da América Latina, A MOSTRATEC. Tudo isso graças ao projeto ser disruptivo e possuir uma interface agradável e de fácil acesso para idosos. </p>
-              <button class="button"> <a href="https://drive.google.com/file/d/1CqFKm2ygDFYHrEVyR4957pfsNbOmAM93/view?usp=share_link" target="_blank">Currículo</a> </button>
+              <button class="button" href="https://drive.google.com/file/d/1CqFKm2ygDFYHrEVyR4957pfsNbOmAM93/view?usp=share_link"> <a href="https://drive.google.com/file/d/1CqFKm2ygDFYHrEVyR4957pfsNbOmAM93/view?usp=share_link" target="_blank">Currículo</a> </button>
             </div>
           </div>
         </section>
